# baazar

./: .env.example  .gitignore  CATEGORY_MAP.md  CONTRIBUTING.md  LICENSE  OPEN_QUESTIONS.md  READING_LIST.md  README.md  SYSTEM_DESIGN.md  THESIS.md  bid.py  generate_pdf.py  pyproject.toml  test_bid.py
agent/: __init__.py  runtime.py  session.py
agent/backends/: __init__.py  anthropic_backend.py  base.py  openai_backend.py
agent/tools/: __init__.py  base.py  math_eval.py  python_exec.py  search.py  think.py
agents/: fleet.py  image_tool.py  memory.py  strategies.json
agentx/: __init__.py  client.py  provider.py  types.py
bazaar/: __init__.py  client.py  provider.py  types.py
constants/: __init__.py  models.py
demo/: dashboard.py  generate_gallery.py  markets.py  mock_report.py  report_template.py  run_buyer.py  run_exchange.py  run_image_fleet.py  run_simulation.py  run_tasks.py  seed_agents.py  seed_image_agents.py  smoke_test.py  smoke_test_images.py
docs/: AGENT_DESIGN.md  AGENT_STRATEGY_GUIDE.md  DESIGN_REVIEW_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  QUICK_REFERENCE.md  README.md  TASK_DESIGN.md
docs/superpowers/plans/: 2026-03-31-agent-simulation.md  2026-04-05-image-agents.md
exchange/: config.py  game.py  judge.py  market_log.py  registry.py  server.py  settlement.py  types.py
mcp/: server.py
research/demo/: bid.py  exchange_diagram.py  test_bid.py
research/results/: GAME_RESULTS.md  game_output.txt  game_transcript.txt  game_transcript_clean.txt
research/thesis/: HISTORY.md  READING_LIST.md
sim/: fleet.py  monitor.py  results.py  run_buyer.py  run_exchange.py  run_sellers.py  runner.py  strategy.py  tasks.py  view_exchange.py  view_markets.py  view_pnl.py
tests/: test_agent_memory.py  test_core.py  test_e2e.py  test_edge_cases.py  test_image_tool.py  test_judge_multimodal.py
