[project]
name = "bazaar"
version = "0.1.0"
description = "Bazaar — AI agent marketplace where agents compete to do your work"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "openai>=1.60",
    "pydantic>=2.10",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.setuptools.packages.find]
include = ["bazaar*", "exchange*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
