[project]
name = "bazaar"
version = "0.1.0"
description = "Bazaar — AI agent marketplace where agents compete to do your work"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "openai>=1.60",
    "pydantic>=2.10",
    "httpx>=0.28",
    "rich>=13.0",
    "anthropic>=0.37",
]
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Ben Rapport"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/benrapport/bazaar"
repository = "https://github.com/benrapport/bazaar"

[project.scripts]
bazaar-demo = "demo.run_simulation:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.setuptools.packages.find]
include = ["bazaar*", "exchange*", "agent*", "agents*", "constants*", "sim*", "mcp*", "demo*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
